<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">StudyUp</string>
    <string name="character_homepage">Your Character</string>
    <string name="title_activity_auth_redirect" translatable="false">AuthRedirectActivity</string>
    <string name="title_quests">Quests</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_inventory">Items</string>
    <string name="title_infos">Infos</string>
    <string name="save_value">Save</string>
    <string name="truth_value">True</string>
    <string name="false_value">False</string>
    <string name="get_location_text">Get Location</string>
    <string name="add_question_text">Add question</string>
    <string name="add_question_title">Question Title</string>
    <string name="select_image_text">Select an image</string>
    <string name="no_image_selected_text">No image selected</string>
    <string name="true_false_question_text">True or false question</string>
    <string name="multiple_choice_question_text">Multiple choice question</string>
    <string name="answer_number_text">Indicate the answer</string>
    <string name="image_at">Image at: </string>
    <string name="display_question_image">Question image</string>
    <string name="add_question_display_image">Question image</string>
    <string name="answer_question">Answer</string>
    <string name="add_text">Add</string>
    <string name="user_photo">User Photo</string>
    <string name="user_photo_btn">User Photo Button</string>
    <string name="username">User Name</string>
    <string name="user_email">user.name@epfl.ch</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Get Started</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="auth_error_tequila">Auth Error for Tequila</string>
    <string name="auth_error_firebase">Auth Error for Firebase</string>
    <string name="auth_firebase_success">Sign in to Firebase Authenticate: success</string>
    <string name="auth_firebase_failure">Sign in to Firebase Authenticate: failure</string>
    <string name="level_x">LEVEL X</string>
    <string name="money">MONEY</string>
    <string name="add_xp">ADD XP</string>
    <string name="continueTo">Continue</string>
    <string name="post_login_message_key" translatable="false">login_message</string>
    <string name="post_login_message_value">Login Successful</string>
    <string name="login_failed_value">Login Failed</string>
    <string name="text_when_no_role_selected">You must select your role!</string>
    <string name="initial_greeting_1">Welcome, Jean-Louis.</string>
    <string name="initial_greeting_2">Your Sciper number is 123456.</string>
    <string name="problem_images_directory_name" translatable="false">problem_images</string>
    <string name="FB_user_pictures_directory_name" translatable="false">user_pictures</string>
    <string name="log_out">Log out</string>
    <string name="quest_title">Title Quest</string>
    <string name="special_quest_list_title">Special Quest</string>
    <string name="quest_course">Course Quest</string>
    <string name="image_radio_text">Image-based question</string>
    <string name="text_radio">Text-based question</string>
    <string name="title_add_question">Add Question</string>
    <string name="available_quests">Available Quests</string>
    <string name="text_answer_3">Answer 3</string>
    <string name="text_answer_4">Answer 4</string>
    <string name="text_answer_1">Answer 1</string>
    <string name="text_answer_2">Answer 2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="textViewSettings">Settings</string>
    <string name="toast_text_infos_are_coming">Infos are coming soon</string>
    <string name="language_choice_settings_button">Choose your language</string>
    <string name="course_choice_settings_button">Choose your courses</string>
    <string name="color_choice_settings_button">Change color</string>
    <string name="language_title_alert_dialog">Languages</string>
    <string name="cancel">Cancel</string>
    <string name="location_required">This app requires location</string>
    <string name="question_added">Question added!</string>
    <string name="text_truefalse">(True/False)</string>
    <string name="text_mcq">(MCQ)</string>
    <string name="text_answernumber">and answer number</string>
    <string name="text_newposition">NEW POS:</string>
    <string name="text_inyourroom">You are in your room:</string>
    <string name="text_notinyourroom">You are not in your room:</string>
    <string name="text_saved">Saved !</string>
    <string name="text_failed">Failed!</string>
    <string name="text_photospermissions">Can\'t take photos without permission.</string>
    <string name="text_addimage">Add an image</string>
    <string name="items_quantity">x</string>
    <string name="text_money">MONEY: </string>
    <string name="text_level">LEVEL </string>
    <string name="text_itemprice">Price of item: </string>
    <string name="text_currencyyouhave">You have </string>
    <string name="text_itemalreadyhave">You already have this item </string>
    <string name="text_itemtimes"> times</string>
    <string name="text_totalprice">Total price: </string>
    <string name="text_notenoughmoney">You don\'t have enough money!</string>
    <string name="title_questiondb">Question Database</string>
    <string name="text_unabletouploadimage">Unable to upload image</string>
    <string name="text_imageuploadsuccess">Successfully uploaded image</string>
    <string name="title_playerposition">Player position</string>
    <string name="text_questiondlerror">An error occurred when downloading the question</string>
    <string name="text_questiondisplayerror">Error while displaying the question</string>
    <string name="text_makechoice">Make your choice!</string>
    <string name="text_cantanswertwice">You can\'t answer a question twice!</string>
    <string name="text_wronganswer">Wrong answer… Maybe next time?</string>
    <string name="text_correctanswer">Correct answer! Congrats!</string>
    <string name="text_langen" translatable="false">Damn you\'re english !</string>
    <string name="text_langfr" translatable="false">Omelette du fromage</string>
    <string name="item_xppotion_name">XP potion</string>
    <string name="item_sackofcoins_name">Sack of coin</string>
    <string name="item_xppotion_desc">A potion that gives you some XP when drunk !</string>
    <string name="item_sackofcoins_desc">A sack containing lots of shiny coins !</string>
    <string name="ask_confirmation_deletion_quest">Are you sure you want to delete this quest?</string>
    <string name="yes_upper">YES</string>
    <string name="no_upper">NO</string>
    <string name="choose_theme_red">Red</string>
    <string name="choose_theme_green">Green</string>
    <string name="choose_theme_brown">Orange</string>
    <string name="choose_theme_blue">Blue</string>
    <string name="choose_darktheme">Dark Theme</string>
    <string name="existing_questions_text">Your existing question(s) :</string>
    <string name="back_button_simple_text">Back</string>
    <string name="question_edited">Question successfully edited!</string>
    <string name="text_failed_update_courses">Failed to update courses!</string>
    <string name="text_courses_updated">Courses updated!</string>
    <string name="congrat_text_special_quest">Yay! You just completed this quest! You earned a new item: </string>
    <string name="choose_the_language_of_your_question">Choose the language of your question</string>
    <string name="special_quests_title">Special Quests</string>
    <string name="title_activity_schedule" tools:ignore="MissingTranslation">ScheduleActivity</string>
    <string name="course_statistics">Course Statistics</string>
    <string name="displaycourseactivity">DisplayCourseActivity</string>
    <string name="courses" translatable="false">Stats</string>
    <string name="select_the_correct_answer">Select the Correct Answer</string>
    <string name="mcq_or_tf_question">MCQ or TF Question?</string>
    <string name="write_your_question">Write / Select the Image for the Question</string>
    <string name="picture_text_question">Picture or Text Question?</string>
    <string name="course_for_this_quest">Course for this Quest</string>
    <string name="add_a_new_question_text">Add a new Question</string>
    <string name="title_schedule_teacher">My courses</string>
    <string name="title_schedule_student">Schedule</string>
    <string name="room_alert_title">Choose the Room</string>
    <string name="text_insert_title_for_question">Please Insert a Title</string>
    <string name="text_select_course_for_question">Please Select a Course</string>
    <string name="error_when_download_question">An Error Occurred when Downloading the Question</string>
    <string name="chosen_course_for_question">Chosen Course : </string>
    <string name="edit_button_text">Edit</string>
    <string name="choose_course_for_question_text">Choose the Course that Corresponds to your Question</string>
    <string name="write_here_your_question_text">Write Here the Question</string>
    <string name="time_out_notification">A question has timed out, be quicker next time !</string>
    <string name="text_too_recent_API">The display of the schedule is not available yet for API greater than 27.</string>
    <string name="change_role_button_text">Change role</string>
    <string name="schedule_updated_confirmation">Course\'s schedule updated</string>
    <string name="course_choice_settings_button_teacher">Manage your courses</string>
    <string name="other_courses_text">Other courses</string>
    <string name="your_courses_text">Your courses</string>
    <string name="send_request_text">Enroll</string>
    <string name="pending_courses_text">Pending courses</string>
    <string name="accepted_courses_text">Accepted courses</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="item_xp_potion_name">XP potion</string>
    <string name="item_coin_sack_name">Sack of coin</string>
    <string name="item_xp_potion_description">A potion that gives you some xp when drunk !</string>
    <string name="item_coin_sack_description">A sack containing lots of shiny coins !</string>
    <string name="item_use_button_text">Use</string>
    <string name="special_quest_three_questions_title">Three Questions</string>
    <string name="special_quest_three_questions_description">Answer three questions for a surprise item!</string>
    <string name="manage_course_resign_button">Resign</string>
    <string name="choose_your_theme">Choose your theme:</string>
    <string name="room_objective">Your objective: </string>
    <string name="gallery_android_text">Gallery</string>
    <string name="NPC_interaction"> wants to interact with you</string>
    <string name="NPC_accept">Accept</string>
    <string name="NPC_refuse">Refuse</string>
    <string name="NPC">NPC  </string>
    <string name="NPC_temp_description">Hey there, wanna hang ?</string>
    <string name="NPC_too_far_away">You are out of range</string>
    <string name="special_quest_five_questions_title">Five Questions</string>
    <string name="special_quest_five_questions_description">Answer five questions for a surprise item!</string>
    <string name="special_quest_level_up_bonus_title">Level Up Bonus</string>
    <string name="special_quest_level_up_bonus_description">Get a bonus surprise item when you level up!</string>
    <string name="special_quest_creative_username_title">Creative Username</string>
    <string name="special_quest_creative_username_description">Set a creative username and earn a surprise item!</string>
</resources>