<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_quests_student"
        android:icon="@drawable/ic_quests_black_24dp"
        android:title="@string/title_quests" />

    <item
        android:id="@+id/navigation_rankings"
        android:icon="@drawable/ic_rankings_black_24dp"
        android:title="@string/title_rankings" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory_black_24dp"
        android:title="@string/title_inventory"/>

</menu>
