<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ChooseColorActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/language_choice_settings_button"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText"
        tools:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/setThemeRed"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/list_view_shape"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="setColorRed"
        android:text="@string/choose_theme_red"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <Button
        android:id="@+id/setThemeGreen"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/list_view_shape"
        android:backgroundTint="@color/colorPrimaryGreen"
        android:onClick="setColorGreen"
        android:text="@string/choose_theme_green"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setThemeRed" />

    <Button
        android:id="@+id/setThemeBlue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/list_view_shape"
        android:backgroundTint="@color/colorPrimaryBlue"
        android:onClick="setColorBlue"
        android:text="@string/choose_theme_blue"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setThemeBrown" />

    <Button
        android:id="@+id/setThemeBrown"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/list_view_shape"
        android:backgroundTint="@color/colorPrimaryBrown"
        android:onClick="setColorBrown"
        android:text="@string/choose_theme_brown"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setThemeGreen" />

    <Button
        android:id="@+id/setThemeMulti"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/list_view_shape"
        android:backgroundTint="@color/colorPrimaryDarkMulti"
        android:onClick="setColorMulti"
        android:text="@string/choose_theme_multicolor"
        android:textAllCaps="false"
        android:textColor="@color/colorProgressionMulti"
        android:textSize="28sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setThemeBlue" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="backToSettings"
        android:text="@string/back_button_simple_text"
        android:textAllCaps="false"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>